--- a/web/app/views/index.scala.html
+++ b/web/app/views/index.scala.html
@@ -2,4 +2,8 @@
 
 @main("MAD") {
   <h3>Welcome to MAD!</h3>
+  <a href="/questions">View questions</a>
+  <a href="/tree">View tree</a>
+  <a href="/information">View information</a>
+  <a href="/newconceptoid">New conceptoid</a>
 }
